config/awssqs/env_patch.yaml
# This adds the various environment variables needed by the AWS SQS
# Source controller. It also adds anything needed by those environment
# variables (e.g. the secret volume whose location is in a env
# variable).

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: controller-manager
spec:
  template:
    spec:
      containers:
        - name: manager
          volumeMounts:
            - name: aws-credentials
              mountPath: /var/secrets/aws
      volumes:
        - name: aws-credentials
          secret:
            secretName: awssqs-source-credentials
